@@ -15,6 +15,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.List;
+import java.util.stream.Collectors;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -95,7 +96,7 @@ public class StreetEntityServlet extends HttpServlet {
         List<StreetEntity> entities = streetService.getAll();
         List<ResponseStreetEntityDto> responseDtos = entities.stream()
             .map(mapper::map)
-            .toList();
+            .collect(Collectors.toList());
         sendResponse(resp, HttpServletResponse.SC_OK, responseDtos);
       } catch (RepositoryException e) {
         sendErrorResponse(resp, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, e.getMessage());
